[package]
name = "pty_host"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "Lightweight PTY shepherd daemon that holds terminal sessions across Zed restarts"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "pty-host"
path = "src/main.rs"


[features]
# Enable when building against an alacritty_terminal fork with sixel/graphics
# support (e.g. microo8/graphics). Passes cell pixel dimensions to TermSize
# so insert_graphic() gets non-zero cell sizes.
alacritty-graphics = []

[dependencies]
anyhow = "1"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
bincode = "1"

# Same PTY/IO stack as alacritty_terminal
alacritty_terminal = { git = "https://github.com/dsturnbull/alacritty", rev = "da57ba29" }
libc = "0.2"
polling = "3.8.0"
rustix-openpty = "0.2.0"
rustix = { version = "1.0.0", default-features = false, features = ["std"] }
signal-hook = "0.3.10"

# Minimal CLI
env_logger = "0.11"
jiff = "0.2"

[target.'cfg(unix)'.dependencies]

[dev-dependencies]
